attempt #1 to fix issue on mobile layout due to images

--- a/global.css
+++ b/global.css
@@ -47,8 +47,8 @@ body {
   align-items: center;
 }
 .content img {
-  width: 460px;
-  height: 345px;
+  width: 400px;
+  height: 300px;
   margin: 15px 0;
 }
 .content h1 {
